<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yellow_light"
        android:src="@drawable/light_off"
        android:contentDescription="@string/yellow_light"
        android:baselineAlignBottom="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/green_light"
        android:src="@drawable/light_off"
        android:contentDescription="@string/green_light"
        android:layout_below="@+id/yellow_light"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/red_light"
        android:src="@drawable/light_off"
        android:contentDescription="@string/red_light"
        android:layout_above="@+id/yellow_light"
        android:layout_alignLeft="@+id/yellow_light"
        android:layout_alignStart="@+id/yellow_light" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Red"
        android:id="@+id/red_button"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/green_light"
        android:layout_toStartOf="@+id/green_light"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Yellow"
        android:id="@+id/yellow_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Green"
        android:id="@+id/green_button"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/green_light"
        android:layout_toEndOf="@+id/green_light"
        android:textColor="#000000" />

</RelativeLayout>
